5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1800_2563.log
== SUBMITION (2019-06-11 11:05:57) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
0.904203
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 7, in <module>
    aprov=arov+1
NameError: name 'arov' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:06:11) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
0.983895
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 7, in <module>
    aprov=arov+1
NameError: name 'arov' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:06:31) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
0.974229
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 7, in <module>
    aprov=arov+1
NameError: name 'arov' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:06:33) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
1.48586
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 7, in <module>
    aprov=arov+1
NameError: name 'arov' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:06:34) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
1.38918
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1800/2563/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:06:54) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
1.126
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 7, in <module>
    aprov=arov+1
NameError: name 'arov' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:07:10) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
1.05457
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 7, in <module>
    aprov=arov+1
NameError: name 'arov' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:07:54) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
1.5718
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 7, in <module>
    aprov=arov+1
NameError: name 'arov' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:07:54) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:07:54) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:07:55) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
3.341
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 7, in <module>
    aprov=arov+1
NameError: name 'arov' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:07:56) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
2.08438
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 7, in <module>
    aprov=arov+1
NameError: name 'arov' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:07:57) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
1.58068
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 7, in <module>
    aprov=arov+1
NameError: name 'arov' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:07:59) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
5.67466
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 7, in <module>
    aprov=arov+1
NameError: name 'arov' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:08:00) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
9.50003
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 7, in <module>
    aprov=arov+1
NameError: name 'arov' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:08:12) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
5.48336
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 7, in <module>
    aprov=arov+1
NameError: name 'arov' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:08:14) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
5.89204
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 7, in <module>
    aprov=arov+1
NameError: name 'arov' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:08:15) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
6.00302
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 7, in <module>
    aprov=arov+1
NameError: name 'arov' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:08:16) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
6.01096
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 7, in <module>
    aprov=arov+1
NameError: name 'arov' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:08:17) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
5.83164
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 7, in <module>
    aprov=arov+1
NameError: name 'arov' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:08:19) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
6.2338
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 7, in <module>
    aprov=arov+1
NameError: name 'arov' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:08:29) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
5.73602
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 7, in <module>
    aprov=arov+1
NameError: name 'arov' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:08:30) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
5.58206
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 7, in <module>
    aprov=arov+1
NameError: name 'arov' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:08:31) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
5.31415
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 7, in <module>
    aprov=arov+1
NameError: name 'arov' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:08:32) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
5.1141
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 7, in <module>
    aprov=arov+1
NameError: name 'arov' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:08:33) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
5.15976
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 7, in <module>
    aprov=arov+1
NameError: name 'arov' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:08:35) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=arov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
4.99673
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 7, in <module>
    aprov=arov+1
NameError: name 'arov' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:08:46) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
5.09511
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
5
3
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
6
0
3
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
11
4
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:08:48) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
5.61804
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:08:49) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
5.77746
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:08:50) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
5.6594
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:08:51) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
5.8168
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
11
4
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
5
3
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
6
0
3
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:08:52) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
5.63589
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
11
4
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
5
3
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
6
0
3
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:08:58) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
5.83344
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
5
3
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:

-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
notas: 5
notas:3
notas:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:08:59) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
4.34425
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
notas: 11
notas:4
notas:1
notas:
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
notas: 5
notas:3
notas:
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:08:59) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
2.34258
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1800/2563/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:08:59) 
-- CODE:
from numpy import*
nota = array(eval(input("notas: ")))
while(size(nota)>1):
	aprov = 0
	for e in nota:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	nota = array(eval(input("notas:")))
	
	
-- EXECUTION TIME:
3.31254
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
notas: 5
notas:3
notas:
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:43:16) 
-- CODE:

	
	from numpy import*
x = array(eval(input("x:")))

while(size(x)>1):
	aprov=0
	for e in x:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	x = array(eval(input("x:")))
-- EXECUTION TIME:
0.537009
-- ERROR:
  File "/home/codebench/codes/1800/2563/main.py", line 3
    from numpy import*
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:43:22) 
-- CODE:

	
	from numpy import*
x = array(eval(input("x:")))

while(size(x)>1):
	aprov=0
	for e in x:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	x = array(eval(input("x:")))
-- EXECUTION TIME:
0.888394
-- ERROR:
  File "/home/codebench/codes/1800/2563/main.py", line 3
    from numpy import*
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:43:29) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(x)>1):
	aprov=0
	for e in x:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	x = array(eval(input("x:")))
-- EXECUTION TIME:
1.18829
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
